--- a/styles.css
+++ b/styles.css
@@ -59,8 +59,9 @@ h1 {
     padding: 20px;
 }
 
-video {
+.video {
     display: block;
+    width: fit-content;
     max-width: 80vw;
     margin: 50px auto;
     padding: 50px;
@@ -70,11 +71,17 @@ video {
     box-shadow: 0px 6px 6px rgb(0, 0, 0, 0.3);
 }
 
+video {
+    display: block;
+    max-width: 80vw;
+    margin: auto;
+    padding-top: 20px;
+}
+
 .description {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    flex-dir;
 }
 
 .description > div {
@@ -98,6 +105,7 @@ h3 {
 p, ul{
     font-family: 'lato';
     font-size: 16px;
+    line-height: 160%;
     color: var(--brown);
     margin-bottom: 0;
 }
