add nav :pencil2:
added navigation to alpha build from index page

--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,9 @@ html, body{
     text-wrap: pretty;
 }
 
-/*home page*/
-.nav {
+/*index page*/
+.nav a {
+    display: block;
     background-color: var(--tan);
     margin: 50px auto;
     width: 50vw;
