--- a/idm241/beta/beta.css
+++ b/idm241/beta/beta.css
@@ -75,8 +75,9 @@ h3 {
     margin-top: 50px;
 }
 
-.title h3 {
+.title a {
     text-align: center;
+    text-decoration-color: var(--brown);
 }
 
 p, ul{
