--- a/idm241/beta/beta.css
+++ b/idm241/beta/beta.css
@@ -32,7 +32,7 @@ html, body{
     text-wrap: pretty;
 }
 
-/*description*/
+/*descriptions*/
 h1 {
     font-family: 'merriweather';
     font-size: 48px;
@@ -101,15 +101,7 @@ ul {
 }
 
 .video {
-    display: block;
-    width: fit-content;
-    max-width: 80vw;
-    margin: 25px auto 50px;
-    padding: 50px;
-    background-color: var(--tan);
-    outline: var(--brown) solid 2px;
-    border-radius: 20px;
-    box-shadow: 0px 6px 6px rgb(0, 0, 0, 0.3);
+    height: fit-content;
 }
 
 video {
