--- a/idm241/final/final.css
+++ b/idm241/final/final.css
@@ -74,7 +74,6 @@ h3 {
     font-family: 'merriweather';
     font-size: 24px;
     color: var(--brown);
-    margin: 50px 0;
 }
 
 .title a {
@@ -98,7 +97,7 @@ ul {
     padding-left: 25px;
 }
 
-.wtr-loops-and-modes p, .stars-loops-and-modes p, .ni-loops-and-modes p{
+.wtr-loops-and-modes p, .stars-loops-and-modes p, .ni-loops-and-modes p, .modal p{
     text-decoration: none;
 }
 
