--- a/idm241/final/final.css
+++ b/idm241/final/final.css
@@ -62,7 +62,7 @@ h3 {
 }
 
 .descriptions > div {
-    max-width: 500px;
+    width: 500px;
     margin: 25px;
     padding: 50px;
     background-color: var(--tan);
@@ -101,7 +101,7 @@ ul {
     padding-left: 25px;
 }
 
-.wtr-loops-and-modes p, .stars-loops-and-modes p, .ni-loops-and-modes p, .modal p{
+.wtr-loops-and-modes p, .stars-loops-and-modes p, .ni-loops-and-modes p, .modal p, .more-loops-and-modes p, .less-loops-and-modes p{
     text-decoration: none;
 }
 
