Add Hover on NI Button 💄

--- a/idm241/final/final.css
+++ b/idm241/final/final.css
@@ -222,6 +222,10 @@ video {
     transition: all 200ms ease-in-out;
 }
 
+.ni-button button:hover {
+    color: #002926;
+}
+
 .ni-overlay {
     transition: all 200ms ease-in-out;
 }
