--- a/idm241/final/final.css
+++ b/idm241/final/final.css
@@ -123,19 +123,19 @@ video {
 }
 
 /*build*/
-.build {
-    width: fit-content;
-    margin: 100px auto;
+.builds {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    row-gap: 10px;
+    align-items: start;
+    column-gap: 50px;
+    row-gap: 50px;
+    margin: 100px 25px;
 }
 
-.ni-overlay {
+.build {
     width: fit-content;
-    margin: 0 auto;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -193,7 +193,6 @@ video {
 }
 
 /* hover state */
-.star:hover,
 .star.hovered {
     background: url('star.svg') no-repeat center/contain;
     filter: brightness(0) saturate(100%) invert(72%) sepia(48%) saturate(676%) hue-rotate(1deg) brightness(101%);
@@ -206,15 +205,22 @@ video {
 }
 
 /*not interested button*/
-.ni-button {
-    margin: 0 auto;
+.ni-overlay {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    row-gap: 10px;
 }
 
-.ni-button button{
+.ni-button{
     font-family: 'lato';
     font-size: 16px;
     color: var(--turquoise);
     text-decoration: underline;
+    text-align: center;
     background-color: rgba(0, 0, 0, 0);
     border: none;
     margin: 0 auto;
@@ -222,21 +228,37 @@ video {
     transition: all 200ms ease-in-out;
 }
 
-.ni-button button:hover {
+.ni-button:hover {
     color: #002926;
+}
+
+.ni-box {
+    display: none;
+    position: absolute;
+    z-index: 1000;
+    bottom: 31px;
+    width: 170px;
+    height: 281px;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.ni-box p {
+    text-decoration: none;
 }
 
 .ni-overlay {
     transition: all 200ms ease-in-out;
 }
 
+/* book description */
 .book-description {
     position: absolute;
+    z-index: 999;
     top: 0%;
     left: 100%;
     display: flex;
     width: 400px;
-    max-width: 37vw;
+    max-width: 25vw;
     flex-direction: column;
     justify-content: left;
     align-items: left;
@@ -247,8 +269,7 @@ video {
     outline: var(--brown) solid 5px;
     border-radius: 5px;
     box-shadow: 0px 6px 6px rgb(0, 0, 0, 0.3);
-    visibility: hidden;
-    opacity: 0;
+    /*opacity: 0;*/
     transition: opacity 300ms ease-in-out, visibility 0.3s ease-in-out;
 }
 
@@ -290,7 +311,7 @@ video {
     text-overflow: ellipsis;
     max-height: 89px;
     opacity: 1;
-    transition: max-height 400ms ease-in-out, opacity 300ms ease-in-out;
+    transition: max-height 300ms ease-in-out, opacity 300ms ease-in-out;
 }
 
 .untruncated-text {
@@ -298,7 +319,7 @@ video {
     text-overflow: unset;
     max-height: 500px;
     opacity: 1;
-    transition: max-height 400ms ease-in-out, opacity 300ms ease-in-out;
+    transition: max-height 300ms ease-in-out, opacity 300ms ease-in-out;
 }
 
 .book-description button {
@@ -320,7 +341,7 @@ video {
     opacity: 1;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 850px) {
     .book-cover {
         width: 141.6px;
         overflow-x: visible;
@@ -332,7 +353,7 @@ video {
     }
 
     .book-description {
-        position: relative;
+        position: absolute;
         top: 0;
         left: 0;
         display: flex;
@@ -343,17 +364,14 @@ video {
         justify-content: left;
         align-items: left;
         margin: 20px;
-        display: none;
         visibility: hidden;
         opacity: 0;
         transition: opacity 300ms ease-in-out;
     }
 
-
-
-    .book-cover:hover .book-description, .book-description:hover {
+    /*.book-cover:hover .book-description, .book-description:hover {
         display: flex;
         visibility: visible;
         opacity: 1;
-    }
+    }*/
 }
