--- a/idm241/final/final.css
+++ b/idm241/final/final.css
@@ -256,7 +256,7 @@ video {
     z-index: 999;
     top: 0%;
     left: 100%;
-    display: flex;
+    display: none;
     width: 400px;
     max-width: 25vw;
     flex-direction: column;
