--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,10 @@ video {
 .hero video {
     border: var(--brown) solid 5px;
     border-radius: 10px;
+    max-width: 90vw;
+    max-height: 50vh;
+    width: auto;
+    height: auto;
 }
 
 h2 {
@@ -186,7 +190,7 @@ h2 {
 
 .writing {
     max-width: 850px;
-    margin: 0 auto;
+    margin: 25px auto 0;
 }
 
 .case-study p{
